# signuppage

./: .env  Cargo.toml  diesel.toml  styles.css
migrations/2024-11-05-125759_create_users/: up.sql
src/: handlers.rs  main.rs  models.rs  schema.rs
static/: login.html  sign_up.html
