[package]
name = "signup-page"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
argon2 = { version = "0.4", features = ["password-hash","std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
log = "0.4"
futures = "0.3"